--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   url_launcher: ^6.0.0
   persistent_bottom_nav_bar: ^6.2.1
   maxx_sunmi_printer: ^0.0.6
+  custom_date_range_picker: ^1.1.0
 #  flutter_launcher_icons: ^0.13.1
   http:
 
