--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   google_fonts: ^6.2.1
   animations: ^2.0.8
   flutter_staggered_animations: ^1.1.1
+  buttons_tabbar: ^1.3.13
+
 
 
 #  flutter_launcher_icons: ^0.13.1
