--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -95,7 +95,7 @@ flutter:
     - assets/images/
     - assets/images/logo.png
     - assets/images/share.gif
-    - assets/
+    - assets/animations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
