--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   animations: ^2.0.8
   flutter_staggered_animations: ^1.1.1
   buttons_tabbar: ^1.3.13
+  flutter_launcher_icons: ^0.13.1
 
 
 
