--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,7 +58,7 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   buttons_tabbar: ^1.3.13
   flutter_launcher_icons: ^0.13.1
-
+  pinput: ^3.0.1
 
 
 #  flutter_launcher_icons: ^0.13.1
