--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   buttons_tabbar: ^1.3.13
   flutter_launcher_icons: ^0.13.1
   pinput: ^3.0.1
+  flutter_locales: ^3.0.2
 
 
 #  flutter_launcher_icons: ^0.13.1
@@ -69,6 +70,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_test:
     sdk: flutter
+  flutter_locales:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
@@ -112,6 +114,9 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/locales/ar.json
+    - assets/locales/en.json
+    - assets/locales/hi.json
     - assets/images/logo.png
     - assets/images/share.gif
     - assets/animations/
