--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,9 @@ dependencies:
   cached_network_image: ^3.3.1
   shimmer: ^3.0.0
   flutter_animated_button: ^2.0.3
+  flutter_web_auth:
+  google_sign_in: ^6.2.1
+  razorpay_flutter: ^1.3.7
 
 
 
