--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -64,4 +64,6 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+        implementation 'com.google.android.gms:play-services-auth:20.6.0'  // Make sure you use a compatible version
+}
